Project

General

Profile

Actions

Bug #9978

closed

memory leak at ENV.select on Windows

Bug #9978: memory leak at ENV.select on Windows

Added by nobu (Nobuyoshi Nakada) over 12 years ago. Updated about 12 years ago.

Status:
Closed
Assignee:
Target version:
ruby -v:
trunk
[ruby-dev:48325]

Description

Windows版で、ENV.select {break} がメモリリークしているようです。


Related issues 1 (0 open — 1 closed)

Copied to Ruby - Bug #9983: memory leak at ENV.shift on WindowsClosedwindowsActions
Actions

Also available in: PDF Atom